# suppress_stdout

./: CMakeLists.txt  expect_words.sh  main.c  my_functions.c  my_functions.h  suppressor.c  suppressor.h
